# ai

./: .gitignore  README.md
python-mcp-demos/: .env-sample  .env.sample.ollama  .gitignore  README.md  azure.yaml  pyproject.toml  requirements-all.txt  requirements-basic.txt
python-mcp-demos/.devcontainer/: devcontainer.json  launch-inspector-codespace.sh
python-mcp-demos/.devcontainer/ollama/: Dockerfile  devcontainer.json
python-mcp-demos/.github/: dependabot.yml
python-mcp-demos/agents/: agentframework_http.py  agentframework_learn.py  langchainv1_github.py  langchainv1_http.py
python-mcp-demos/infra/: appinsights-dashboard.bicep  http-routes.bicep  main.bicep
python-mcp-demos/keycloak/: Dockerfile  realm.json
python-mcp-demos/servers/: auth_entra_mcp.py  auth_keycloak_mcp.py  basic_mcp_http.py  basic_mcp_stdio.py  cosmosdb_store.py  deployed_mcp.py  expenses.csv  otel_aspire.py
python-mcp-demos/spanish/: README.md
python-openai-demos/: .env.sample  .env.sample.azure  .env.sample.ollama  README.md  chat.py  fdy_login_rbac.azcli  function_calling_basic.py  rag_csv.py  requirements-rag.txt
python-openai-demos/.devcontainer/ollama/: devcontainer.json
python-openai-demos/spanish/: README.md
